# dino-shred

./: .gitignore  dino_shred.ipynb  main.py  pyproject.toml
